<resources>
    <string name="app_name">Quero Ser R1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--Menu-->
    <string name="item_info_drawer">Sobre</string>
    <string name="item_logout_drawer">Deslogar</string>
    <string name="item_exit_drawer">Sair</string>
    <string name="tv_name_header">Android Studio</string>
    <string name="tv_email_header">android.studio@android.com</string>

    <!--Main-->
    <string name="tv_exercices_main">Exercícios</string>
    <string name="tv_performance_main">Desempenho</string>
    <string name="tv_settings_main">Configuração</string>
    <string name="tv_add_main">Adicionar</string>
    <string name="tv_profile_main">Perfil</string>
    <string name="tv_about_main">Sobre</string>

</resources>
