<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main"
    tools:context=".activities.MainActivity"
    >

    <RelativeLayout
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        >

        <TextView
            android:id="@+id/tv_title_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/allan"
            android:text="@string/app_name"
            android:textSize="45sp"
            />

    </RelativeLayout>

    <GridLayout
        android:id="@+id/gl_content_main"
        android:layout_weight="8"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:rowCount="3"
        android:columnOrderPreserved="false"
        android:padding="14dp"
        >

        <!--Row 1-->
        <!--Column 1-->
        <android.support.v7.widget.CardView
            android:id="@+id/cv_exercices_main"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="@dimen/cv_margin_main"
            android:layout_marginLeft="@dimen/cv_margin_main"
            android:layout_marginRight="@dimen/cv_margin_main"
            app:cardBackgroundColor="@color/colorCardViewMain"
            app:cardCornerRadius="@dimen/cv_corner_radius_main"
            app:cardElevation="@dimen/cv_elevation_main"
            >

            <LinearLayout
                android:id="@+id/ll_exercices_main"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="@dimen/ll_cv_margin_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <ImageView
                    android:id="@+id/iv_exercices_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_tabs_exercices" />

                <TextView
                    android:id="@+id/tv_exercices_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/tv_cv_text_size"
                    android:text="@string/tv_exercices_main"
                    android:textStyle="bold"
                    />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!--Column 2-->
        <android.support.v7.widget.CardView
            android:id="@+id/cv_performance_main"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_marginBottom="@dimen/cv_margin_main"
            android:layout_marginLeft="@dimen/cv_margin_main"
            android:layout_marginRight="@dimen/cv_margin_main"
            android:layout_rowWeight="1"
            app:cardBackgroundColor="@color/colorCardViewMain"
            app:cardCornerRadius="@dimen/cv_corner_radius_main"
            app:cardElevation="@dimen/cv_elevation_main">

            <LinearLayout
                android:id="@+id/ll_performance_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="@dimen/ll_cv_margin_main"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_performance_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_tabs_performance" />

                <TextView
                    android:id="@+id/tv_performance_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/tv_performance_main"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/tv_cv_text_size"
                    android:textStyle="bold" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!--Row 2-->
        <!--Column 1-->
        <android.support.v7.widget.CardView
            android:id="@+id/cv_settings_main"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_marginBottom="@dimen/cv_margin_main"
            android:layout_marginLeft="@dimen/cv_margin_main"
            android:layout_marginRight="@dimen/cv_margin_main"
            android:layout_rowWeight="1"
            app:cardBackgroundColor="@color/colorCardViewMain"
            app:cardCornerRadius="@dimen/cv_corner_radius_main"
            app:cardElevation="@dimen/cv_elevation_main">

            <LinearLayout
                android:id="@+id/ll_settings_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="@dimen/ll_cv_margin_main"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_settings_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_tabs_settings" />

                <TextView
                    android:id="@+id/tv_settings_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/tv_settings_main"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/tv_cv_text_size"
                    android:textStyle="bold" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!--Column 2-->
        <android.support.v7.widget.CardView
            android:id="@+id/cv_add_main"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_marginBottom="@dimen/cv_margin_main"
            android:layout_marginLeft="@dimen/cv_margin_main"
            android:layout_marginRight="@dimen/cv_margin_main"
            android:layout_rowWeight="1"
            app:cardBackgroundColor="@color/colorCardViewMain"
            app:cardCornerRadius="@dimen/cv_corner_radius_main"
            app:cardElevation="@dimen/cv_elevation_main">

            <LinearLayout
                android:id="@+id/ll_add_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="@dimen/ll_cv_margin_main"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_add_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_tabs_add" />

                <TextView
                    android:id="@+id/tv_add_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/tv_add_main"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/tv_cv_text_size"
                    android:textStyle="bold" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!--Row 3-->
        <!--Column 1-->
        <android.support.v7.widget.CardView
            android:id="@+id/cv_profile_main"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_marginBottom="@dimen/cv_margin_main"
            android:layout_marginLeft="@dimen/cv_margin_main"
            android:layout_marginRight="@dimen/cv_margin_main"
            android:layout_rowWeight="1"
            app:cardBackgroundColor="@color/colorCardViewMain"
            app:cardCornerRadius="@dimen/cv_corner_radius_main"
            app:cardElevation="@dimen/cv_elevation_main">

            <LinearLayout
                android:id="@+id/ll_profile_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="@dimen/ll_cv_margin_main"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_profile_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_tabs_profile" />

                <TextView
                    android:id="@+id/tv_profile_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/tv_profile_main"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/tv_cv_text_size"
                    android:textStyle="bold" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!--Column 2-->
        <android.support.v7.widget.CardView
            android:id="@+id/cv_about_main"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_marginBottom="@dimen/cv_margin_main"
            android:layout_marginLeft="@dimen/cv_margin_main"
            android:layout_marginRight="@dimen/cv_margin_main"
            android:layout_rowWeight="1"
            app:cardBackgroundColor="@color/colorCardViewMain"
            app:cardCornerRadius="@dimen/cv_corner_radius_main"
            app:cardElevation="@dimen/cv_elevation_main">

            <LinearLayout
                android:id="@+id/ll_about_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="@dimen/ll_cv_margin_main"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_about_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_tabs_info" />

                <TextView
                    android:id="@+id/tv_about_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/tv_about_main"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/tv_cv_text_size"
                    android:textStyle="bold" />
            </LinearLayout>

        </android.support.v7.widget.CardView>
    </GridLayout>
</LinearLayout>